<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/upper_panel"
        android:scaleType="fitXY"
        android:paddingBottom="-30dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/ticket"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:paddingTop="-30dp"
            android:layout_alignParentTop="true"/>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:id="@+id/tv_layout"
            android:layout_below="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <TextView
                    android:id="@+id/route_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/use_label_text_color"
                    android:text="@string/route"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"/>

                <TextView
                    android:id="@+id/from_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/route_title"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:text="@string/from"
                    android:textStyle="bold"
                    android:layout_marginTop="3dp"/>

                <TextView
                    android:id="@+id/tv_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/route_title"
                    android:layout_toRightOf="@+id/from_title"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="3dp"/>

                <TextView
                    android:id="@+id/to_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/from_title"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:textStyle="bold"
                    android:text="@string/to" />

                <TextView
                    android:id="@+id/tv_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/from_title"
                    android:layout_toRightOf="@+id/to_title"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:layout_marginLeft="3dp"/>

                <TextView
                android:id="@+id/when_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/use_label_text_color"
                android:text="@string/when"
                android:textStyle="bold"
                android:textSize="13dp"
                android:layout_below="@+id/to_title"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/when_title"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_time"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/empty_seats_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/use_label_text_color"
                    android:text="@string/empty_seats_ticket"
                    android:textStyle="bold"
                    android:textSize="13dp"
                    android:layout_below="@+id/to_title"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:id="@+id/tv_empty_seats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/empty_seats_title"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="13dp"
                    android:layout_marginTop="5dp"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="13dp"
                android:textColor="@color/use_label_text_color"
                android:text="..............................................................................................................................................................................."
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"/>

            <Button
                android:id="@+id/btn_buy_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="6dp"
                android:background="@drawable/buy_button"
                android:text="@string/buy_ticket"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="6dp"
                android:background="@color/transparent"
                android:text="@string/not_now"
                android:textColor="@color/use_label_text_color"
                android:textStyle="normal"
                android:textSize="15dp"/>
        </LinearLayout>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:src="@drawable/bottom_panel"
        android:scaleType="fitXY"/>

</LinearLayout>