<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="sk.meetz.zlty_odchytavac.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/btn_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/credits"
                android:background="@color/transparent"
                android:layout_gravity="left"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name1"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/upper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/search_background"
            android:padding="10dp">
            <LinearLayout
                android:id="@+id/left_side_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/travel_from"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

                <Button
                    android:id="@+id/btn_start_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_start_point"
                    android:textColor="@color/texts_in_inputs"
                    android:background="@drawable/main_activity_button_selector"
                    android:layout_marginBottom="10dp"
                    android:textSize="13dp"
                    android:drawableLeft="@drawable/icon_location"
                    android:drawableRight="@drawable/icon_arrow_down"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="left|center_vertical"/>

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="30dp"-->
                    <!--android:layout_gravity="end"-->
                    <!--android:src="@drawable/icon_from_to_green"-->
                    <!--android:layout_marginTop="-8dp"-->
                    <!--android:layout_marginBottom="-15dp"/>-->
                <ImageButton
                    android:id="@+id/btn_exchage_stations"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:src="@drawable/icon_from_to_green"
                    android:background="@color/transparent"
                    android:layout_marginTop="-8dp"
                    android:layout_marginBottom="-15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/travel_to"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

                <Button
                    android:id="@+id/btn_end_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_target"
                    android:textColor="@color/texts_in_inputs"
                    android:background="@drawable/main_activity_button_selector"
                    android:layout_marginBottom="10dp"
                    android:textSize="13dp"
                    android:drawableRight="@drawable/icon_arrow_down"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="left|center_vertical"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_road"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="15/07/2016"
                    android:textColor="@color/texts_in_inputs"
                    android:background="@drawable/main_activity_button_selector"
                    android:layout_marginBottom="16dp"
                    android:textSize="13dp"
                    android:drawableRight="@drawable/icon_calendar"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="left|center_vertical"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/right_side_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/left_side_layout"
                android:layout_marginLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency"
                    android:textColor="@color/white"
                    android:textSize="15dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">
                    <Button
                        android:id="@+id/btn_eur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="EUR"
                        android:textSize="13dp"
                        android:textColor="@color/white"
                        android:background="@drawable/main_currency_button_selected_left"/>
                    <Button
                        android:id="@+id/btn_czk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="CZK"
                        android:textSize="13dp"
                        android:textColor="@color/white"
                        android:background="@drawable/main_currency_button_unselected_right"/>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarif"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:layout_marginTop="8dp"/>

                <Button
                    android:id="@+id/btn_tarif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/texts_in_inputs"
                    android:background="@drawable/main_activity_button_selector"
                    android:layout_marginBottom="16dp"
                    android:textSize="13dp"
                    android:drawableRight="@drawable/icon_arrow_down"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:gravity="left|center_vertical"/>

            </LinearLayout>

        </LinearLayout>


            <TextView
                android:id="@+id/lb_last_finding_routes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/lb_last_finding_routes"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/lb_last_finding_routes"
                android:layout_below="@id/upper_layout"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lb_last_finding_routes"
                android:background="?android:colorBackground">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/no_last_route"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical">
                </android.support.v7.widget.RecyclerView>

            </RelativeLayout>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@drawable/icon_search"
            android:layout_marginRight="5dp"
            app:layout_anchor="@id/upper_layout"
            app:layout_anchorGravity="bottom|right|end" />

    </android.support.design.widget.CoordinatorLayout>


</RelativeLayout>
